fixed pricing includes alignment

--- a/app/assets/styles/modules/_pricing.css
+++ b/app/assets/styles/modules/_pricing.css
@@ -1,3 +1,17 @@
+/*.specific-price {
+
+  width: 100%;
+  height: 100%;
+
+}*/
+
+
+
+
+.package {
+  padding-bottom: 4.5rem;
+}
+
 .price {
   display: block;
   margin: 0 auto;
@@ -33,25 +47,18 @@
 
 }
 
-.specific-price {
-
-  width: 100%;
-  height: 100%;
-
-}
-
-
-
-
-.package {
-  /*padding: 10px 0;*/
-}
 
 .includes {
   display: inline-block;
   list-style-type: none;
-  line-height: 35px;
-  transform: translateY(20px) !important;
+  margin: 0;
+  line-height: 2rem;
+  transform: translateY(20%) !important;
+
+ li {
+   vertical-align: middle;
+
+}
 
   img {
     width: 15px;
